--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,4 @@
-h5{
-    font-family: 'Crimson Text', serif;
-    font-weight: bolder;
-}
+
  .atag:hover{
     text-decoration: none;
     color:black;
@@ -15,7 +12,7 @@ h5{
 font-size: 19px;
  }
 
- h3,h2{
+ h3,h2,.fontOne{
      font-family: 'Concert One', cursive;
  }
 .bgColor{
